CHANGELOG

[Master]
- add fromName function
- dictionary function
- build chord
- add dictionaries